# UCOT__FileBridge

./: .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  db.sqlite3  docker-compose.override.yml  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt  wait-for-db.sh
accounts/: models.py  serializers.py  views.py
accounts/migrations/: 0001_initial.py
config/: env_settings.py  settings.py  urls.py
files/: models.py  serializers.py  views.py
files/migrations/: 0001_initial.py  0002_alter_file_options_file_title.py
