[project]
name = "ucot-filebridge"
version = "0.1.0"
description = "Simple Django File Management System with PostgreSQL"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "asgiref==3.10.0",
    "Django==5.2.7",
    "djangorestframework==3.16.1",
    "djangorestframework-simplejwt==5.5.1",
    "inflection==0.5.1",
    "packaging==25.0",
    "psycopg2-binary==2.9.11",
    "PyJWT==2.10.1",
    "pytz==2025.2",
    "PyYAML==6.0.3",
    "sqlparse==0.5.3",
    "uritemplate==4.2.0",
    "gunicorn==23.0.0",
    "drf-yasg==1.21.11",
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
