[project]
name = "ucot-filebridge"
version = "0.1.0"
description = "Simple Django File Management System with PostgreSQL"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "asgiref==3.10.0",
    "Django==5.2.7",
    "djangorestframework==3.16.1",
    "djangorestframework-simplejwt==5.5.1",
    "inflection==0.5.1",
    "packaging==25.0",
    "psycopg2-binary==2.9.11",
    "PyJWT==2.10.1",
    "pytz==2025.2",
    "PyYAML==6.0.3",
    "sqlparse==0.5.3",
    "uritemplate==4.2.0",
    "gunicorn==23.0.0",
    "drf-yasg==1.21.11",
    "dj-database-url>=3.0.1",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=7.0.0",
    "black>=23.12.1",
    "flake8>=7.0.0",
    "flake8-docstrings>=1.7.0",
    "isort>=5.13.2",
    "mypy>=1.8.0",
    "django-stubs>=4.2.7",
    "djangorestframework-stubs>=3.14.5",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]

[tool.black]
line-length = 88
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | migrations
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = ["*/migrations/*", "*/venv/*", "*/.venv/*"]
known_django = ["django"]
known_drf = ["rest_framework"]
sections = ["FUTURE", "STDLIB", "DJANGO", "DRF", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = true
strict_optional = true
plugins = ["mypy_django_plugin.main", "mypy_drf_plugin.main"]

[tool.django-stubs]
django_settings_module = "config.settings"

[[tool.mypy.overrides]]
module = "*.migrations.*"
ignore_errors = true
